--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,9 @@ export(sszOgdDownload)
 export(sszRadioButtons)
 export(sszSelectInput)
 export(sszTextInput)
+importFrom(htmltools,tags)
+importFrom(shiny,actionButton)
+importFrom(shiny,dateRangeInput)
+importFrom(shiny,radioButtons)
+importFrom(shiny,selectInput)
+importFrom(shiny,textInput)
