add airdatepicker widget: function, documentation, styling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(get_generic_css)
 export(get_shiny_css)
 export(sszActionButton)
+export(sszActionButtonIcon)
+export(sszAirDatepickerInput)
 export(sszDateRange)
 export(sszDownload)
 export(sszOgdDownload)
@@ -15,3 +17,4 @@ importFrom(shiny,dateRangeInput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,selectInput)
 importFrom(shiny,textInput)
+importFrom(shinyWidgets,airDatepickerInput)
