add dqshiny as dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(get_shiny_css)
 export(sszActionButton)
 export(sszActionButtonIcon)
 export(sszAirDatepickerInput)
+export(sszAutocompleteInput)
 export(sszDateRange)
 export(sszDownload)
 export(sszOgdDownload)
 export(sszRadioButtons)
 export(sszSelectInput)
 export(sszTextInput)
+importFrom(dqshiny,autocomplete_input)
 importFrom(htmltools,tags)
 importFrom(shiny,actionButton)
 importFrom(shiny,dateRangeInput)
