--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,9 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
 Imports: 
+    dqshiny (>= 0.0.5),
     htmltools,
     shiny,
     shinyWidgets
+Remotes:  
+    github::daqana/dqshiny
