--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(sszActionButtonIcon)
 export(sszAirDatepickerInput)
 export(sszAutocompleteInput)
 export(sszDateRange)
-export(sszDownload)
+export(sszDownloadButton)
+export(sszNumericInput)
 export(sszOgdDownload)
 export(sszRadioButtons)
 export(sszSelectInput)
@@ -16,6 +17,8 @@ importFrom(dqshiny,autocomplete_input)
 importFrom(htmltools,tags)
 importFrom(shiny,actionButton)
 importFrom(shiny,dateRangeInput)
+importFrom(shiny,downloadButton)
+importFrom(shiny,numericInput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,selectInput)
 importFrom(shiny,textInput)
