--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(sszNumericInput)
 export(sszOgdDownload)
 export(sszRadioButtons)
 export(sszSelectInput)
+export(sszSliderInput)
 export(sszTextInput)
 importFrom(dqshiny,autocomplete_input)
 importFrom(htmltools,tags)
@@ -21,5 +22,6 @@ importFrom(shiny,downloadButton)
 importFrom(shiny,numericInput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,selectInput)
+importFrom(shiny,sliderInput)
 importFrom(shiny,textInput)
 importFrom(shinyWidgets,airDatepickerInput)
