sliderInput automatische Roxygen-Dokumentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(sszNumericInput)
 export(sszOgdDownload)
 export(sszRadioButtons)
 export(sszSelectInput)
+export(sszSliderInput)
 export(sszTextInput)
 importFrom(dqshiny,autocomplete_input)
 importFrom(htmltools,tags)
