--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(sszRadioButtons)
 export(sszSelectInput)
 export(sszSliderInput)
 export(sszTextInput)
+import(here)
+import(icons)
 importFrom(dqshiny,autocomplete_input)
 importFrom(htmltools,tags)
 importFrom(shiny,actionButton)
@@ -22,5 +24,6 @@ importFrom(shiny,downloadButton)
 importFrom(shiny,numericInput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,selectInput)
+importFrom(shiny,sliderInput)
 importFrom(shiny,textInput)
 importFrom(shinyWidgets,airDatepickerInput)
