--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
     dqshiny (>= 0.0.5),
+    here,
     htmltools,
+    icons,
     shiny,
     shinyWidgets
 Remotes: 
