create ssz_page as a drop_in for fluidPage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(sszRadioButtons)
 export(sszSelectInput)
 export(sszSliderInput)
 export(sszTextInput)
+export(ssz_page)
 import(here)
 import(icons)
 importFrom(dqshiny,autocomplete_input)
