adjust ssz_page function to still include bootstrap, create separate function to not include bootstrap css

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(sszSelectInput)
 export(sszSliderInput)
 export(sszTextInput)
 export(ssz_page)
+export(ssz_page_without_bootstrap)
 import(here)
 import(icons)
 importFrom(dqshiny,autocomplete_input)
