--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,3 +30,4 @@ importFrom(shiny,selectInput)
 importFrom(shiny,sliderInput)
 importFrom(shiny,textInput)
 importFrom(shinyWidgets,airDatepickerInput)
+importFrom(utils,packageVersion)
