create initial example for (wrongly styled) radio group buttons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(sszDownloadButton)
 export(sszNumericInput)
 export(sszOgdDownload)
 export(sszRadioButtons)
+export(sszRadioGroupButtons)
 export(sszSelectInput)
 export(sszSliderInput)
 export(sszTextInput)
@@ -28,4 +29,5 @@ importFrom(shiny,selectInput)
 importFrom(shiny,sliderInput)
 importFrom(shiny,textInput)
 importFrom(shinyWidgets,airDatepickerInput)
+importFrom(shinyWidgets,radioGroupButtons)
 importFrom(utils,packageVersion)
