--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
-# use template for gitlab pipeline to push main to github
+# use template for gitlab pipeline to push main to github 
 include:
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
     ref: "main"
-    file: "publish-main-to-github.yml"
+    file: "publish-to-github.yml"
+
+publish-main-to-github:
+  extends:
+    - .publish-main-to-github
