--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 include:
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
     ref: "main"
-    file: "publish-main-to-github.yml"
+    file: "publish-to-github.yml"
   # use template for gitlab pipeline to check and build
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
     ref: "main"
