add first version of pkgdown site to check github pages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Remotes:
     mitchelloharawild/icons
 Suggests: 
     devtools,
+    pkgdown,
     sass,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
