--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R: c(
            email = "alessandro.feller@zuerich.ch")
     )
 Description: Style shiny apps according to the city of Zurich's corporate design.
-License: BSD-3-Clause + file LICENSE
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
