--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: zuericssstyle
 Title: Statistik Stadt Zürich CSS styling for shiny apps and html
-Version: 0.2.2
+Version: 0.2.3
 Authors@R: c(
     person("Sara",
            "Hänzi",
@@ -18,6 +18,7 @@ Authors@R: c(
     )
 Description: Style shiny apps according to the city of Zurich's corporate design.
 License: MIT + file LICENSE
+URL: https://github.com/StatistikStadtZuerich/zuericssstyle
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
