--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,7 @@ pandoc: 3.1.1
 pkgdown: 2.1.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-04-01T11:19Z
+last_built: 2025-04-02T14:54Z
+urls:
+  reference: https://github.com/StatistikStadtZuerich/zuericssstyle/reference
+  article: https://github.com/StatistikStadtZuerich/zuericssstyle/articles
