--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://github.com/StatistikStadtZuerich/zuericssstyle
+url: https://statistikstadtzuerich.github.io/zuericssstyle/
 template:
   bootstrap: 5
 
