--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,16 @@ include:
 
 stages:
   - test
+  - build
   - deploy-prod
 
 # run tests separately
 r-testthat-test:
   extends:
     - .r-testthat-test
+
+r-pkgdown-build-no-commit:
+  extends: ".r-pkgdown-build-no-commit"
 
 # run check but do not fail on error, as devtools::check fails with tests while
 # devtools::test or testthat::test passes; issue of internal code files not
