--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,11 @@ stages:
   - build
   - deploy-prod
 
+# run tests separately: here none of the tests are skipped (unlike in the R CMD check)
+r-testthat-test:
+  extends:
+    - .r-testthat-test
+
 r-pkgdown-build-no-commit:
   extends: ".r-pkgdown-build-no-commit"
 
