--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ include:
     ref: "feature-r-version"
     file: "stages.yml"
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
-    ref: "reature-r-version"
+    ref: "feature-r-version"
     file: "publish-to-github.yml"
   # use template for gitlab pipeline to check and build
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
