adjust pipeline to latest template version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,15 @@
-# use template for gitlab pipeline to push main to github
 include:
-  # use template for all stages
+  # use template for all stages 
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
-    ref: "feature-r-version"
+    ref: v1.1.0
     file: "stages.yml"
+  # use template for gitlab pipeline to push main to github
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
-    ref: "feature-r-version"
+    ref: v1.1.0
     file: "publish-to-github.yml"
   # use template for gitlab pipeline to check and build
   - project: "OE-7035/ssz-da/templates/pipeline-templates"
-    ref: "feature-r-version"
+    ref: v1.1.0
     file: "r-check-and-build-packages.yml"
 
 # run tests separately: here none of the tests are skipped (unlike in the R CMD check)
